# CTSBuild

./: .gitignore  CMakeLists.txt  full_build.sh  game.sh
player_data/: settings.json
src/: abstract_graph.hpp  file_utils.hpp  game_object.hpp  graph.hpp  main.cpp  performanceStatistics.hpp  renderer_2d.hpp  runtime_data.cpp  runtime_data.hpp  scene_tree.hpp  tree.hpp  vector2.hpp  window.hpp
src/audio/: sound.hpp  sound2d.cpp  sound2d.hpp  sound3d.cpp  sound3d.hpp  sound_categories.hpp  sound_engine.cpp  sound_engine.hpp  sound_library.hpp
src/components/: renderer_2d.hpp  transform_2d.hpp
src/components/ui/: ui_element.hpp
src/engine/: color.hpp  component.hpp  engine_library.hpp  entity.hpp  file_utils.hpp  game_object.hpp  logger.cpp  logger.hpp  scene.hpp  scene_manager.cpp  scene_manager.hpp  scene_tree.cpp  scene_tree.hpp  settings.cpp  settings.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
src/game/: main_menu_scene.hpp
src/graphics/: shader_2d.hpp  texture_id.hpp
src/graphics/shaders/: ui.vert
src/input/: action.hpp  action_type.hpp  input_manager.cpp  input_manager.hpp  key.hpp  key_state.hpp  mouse_state.hpp
src/math/: graph.hpp  math_library.hpp  tree.hpp  tree_vertex.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp  vertex.hpp
src/systems/: logic_system.cpp  logic_system.hpp  logic_system_register.hpp  testsystem.hpp
src/systems/ui/: ui_system.cpp  ui_system.hpp
src/ui/: ui_alligment.hpp  ui_anchor.hpp  ui_element.hpp  ui_manager.cpp  ui_manager.hpp
src/ui/ui_elments/: ui_panel.cpp  ui_panel.hpp
